# vhdl_lib

./: .gitignore  .gitmodules  LICENSE.md  README.md
axi_regs/hdl/: axi_regs.vhd
axi_uart/hdl/: axi_uart.vhd  axi_uart_regs.vhd
axi_uart/vivado_22.1/: create_prj.tcl
axil_utils/hdl/: axil_pipe.vhd  axil_to_bus.vhd
axil_utils/sim/: axil_pipe_tb.vhd  axil_to_bus_tb.vhd  run.py  teroshdl_export.json  teroshdl_out.xml
bit_sync/rtl/: bit_sync.vhd
counter/hdl/: counter_lite.vhd
debounce/hdl/: debounce.vhd
debounce/rtl/: debounce.vhd
edge_detect/hdl/: edge_detect.vhd
edge_detect/rtl/: edge_detect.vhd
fifo/doc/: fifo.md
fifo/hdl/: fifo.vhd
fifo/rtl/: fifo.vhd
fifo_sync/hdl/: fifo_sync.vhd
gen_logic/: gen_utils_pkg.vhd
glitch_filter/hdl/: glitch_filter.vhd
memory/: mem_utils_pkg.vhd
memory_generator/examples/: mem_gen_example_rom_sp.vhd  mem_gen_example_sdp.vhd  mem_gen_example_tdp.vhd
memory_generator/hdl/: memory_generator.vhd
pulse_extend/hdl/: pulse_extend.vhd
pulse_extend/rtl/: pulse_extend.vhd
pulse_sync/rtl/: pulse_sync.vhd
ram_sp/doc/: ram_sp_stub.txt
ram_sp/hdl/: ram_sp.vhd
reg_bank/examples/: readme.txt
reg_bank/rtl/: reg_bank.vhd
reg_bank/sim/: axi_examp_regs_tb.vhd  examp_regs_tb.vhd
reggie/examples/: axi_examp_regs.vhd  examp_regs.vhd  examp_regs_pkg.vhd
reggie/hdl/: axil_pipe.vhd  (+3 more)
reggie/scripts/reggie/: .gitignore  Cargo.toml
reggie/scripts/reggie/data/: examp.json  examp.md  gen_utils_pkg.vhd  reg_bank.vhd
reggie/scripts/reggie/src/: examp.json  main.rs
utils/: gen_utils_pkg.vhd
wb_regs/: wb_regs_prj
(+174 files in other folders)
