[package]
name = "reggie"
version = "0.1.0"
edition = "2021"
authors = ["David Gussler"]
description = "reggie - an FPGA register manager"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.3", features=["derive"] }
serde = { version="1.0.164", features=["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.41"
chrono = "0.4.26"
